# homely

./: Makefile  docker-compose.dev.yml  docker-compose.yml  render.yaml
.github/workflows/: ci.yaml
backend/api/: .flake8  .gitignore  Dockerfile  README.md  gunicorn_config.py  openapi.yaml  pyproject.toml
backend/api/api/: __init__.py  __main__.py  app.py  config.py  db.py  gunicorn_config.py  models.py
backend/api/api/common/: decorators.py
backend/api/api/extensions/: __init__.py  db.py  extensions.py  jwt.py  marshmallow.py  swagger_ui.py
backend/api/api/static/: openapi.yaml
backend/api/api/user/: __init__.py  models.py  schemas.py  views.py
backend/api/migrations/versions/: 239dbaf6423c_add_task_date_contraints.py  55f2c113c1e0_add_task_model.py  7b9dbaf6420f_initial_postgres_migration.py  9dacb9f9474f_simplify_task_model.py  a6f6729f69a4_nuked_initial_migration.py  aa638a0af754_initial_migration.py  d283caef7445_introduce_task_user_relationship.py  db9f0a0a7307_initial_migration.py
backend/api/src/: __init__.py  config.py
backend/api/src/common/: __init__.py  decorators.py
backend/api/src/extensions/: __init__.py  db.py  jwt.py  marshmallow.py
backend/api/src/static/: openapi.yaml
backend/api/src/task/: __init__.py  db.py  models.py  schemas.py  views.py
backend/api/src/user/: __init__.py  models.py  schemas.py  views.py
backend/api/tests/: conftest.py  test_user.py
backend/api/tests/integration/: common_aux.py  task_aux.py  test_task_views.py  test_user.py  test_user_views.py  user_aux.py
backend/api/tests/unit/: test_user_models.py
(+163 files in other folders)
