[tool.poetry]
name = "api"
version = "0.1.0"
description = "Home automation Web API"
authors = ["Pedro Belfort <belfortdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.1"
flask-migrate = "^4.0.7"
python-dotenv = "^1.0.1"
flask-jwt-extended = "^4.6.0"
flask-bcrypt = "^1.0.1"
flask-marshmallow = "^1.2.1"
marshmallow-sqlalchemy = "^1.0.0"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
