[tool.poetry]
name = "api"
version = "0.1.0"
description = "Home automation Web API"
authors = ["Pedro Belfort <belfortdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.1"
flask-migrate = "^4.0.7"
python-dotenv = "^1.0.1"
flask-jwt-extended = "^4.6.0"
flask-bcrypt = "^1.0.1"
flask-marshmallow = "^1.2.1"
marshmallow-sqlalchemy = "^1.0.0"
gunicorn = "^23.0.0"

flask-swagger-ui = "^4.11.1"
flake8 = "^7.1.1"
black = "^24.8.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^8.2.1"
